# 7bot

./: README.md  launch_agent_gui.bat  tmp_dump_spawn.cs  tmp_reflect.cs
docs/: protocol.md  (+22 more)
python_client/: README.md  pyproject.toml
python_client/examples/: agent_control_runtime_smoke_test.py  gui_only_function_test.py  launch_agent_gui.py  live_gui_integration_test.py  phase2_actions_smoke_test.py  phase45_exploration_smoke_test.py  phase4_observation_smoke_test.py  phase5_search_smoke_test.py  respawn_test.py  smoke_test.py  ws_smoke_test.py
python_client/src/sevendays_bridge/: __init__.py  client.py  commands.py  exceptions.py  models.py  ws_subscriber.py
python_client/src/sevendays_bridge/bases/: __init__.py  base_models.py  base_registry.py
python_client/src/sevendays_bridge/commanding/: __init__.py  command_models.py  command_queue.py
python_client/src/sevendays_bridge/decision/: __init__.py  action_selector.py  target_classifier.py  target_priority.py
python_client/src/sevendays_bridge/exploration/: __init__.py  frontier_selector.py  search_grid.py  search_state.py  sector_scan.py  systematic_explorer.py
python_client/src/sevendays_bridge/gui/: __init__.py  agent_control_panel.py  automation_driver.py  gui_models.py
python_client/src/sevendays_bridge/movement/: __init__.py  heading_controller.py  jump_decision.py  locomotion_controller.py  navigation_config.py  obstacle_recovery.py  target_approach.py
python_client/src/sevendays_bridge/priority/: __init__.py  priority_models.py  priority_monitor.py
python_client/tests/: test_gui_widget_e2e.py
(+101 files in other folders)
