[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sevendays-bridge"
version = "0.1.0"
description = "Minimal Python client for the mnetSevenDaysBridge Phase 1 localhost bridge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["websocket-client>=1.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
